syntax = "proto3";

package account;

option go_package = "proto;account";

service Account {
	rpc Register (AccountRequest) returns (AccountResponse) {}
	rpc Login (AccountRequest) returns (AccountResponse) {}
	rpc GetAccountInfo (AccountRequest) returns (AccountResponse) {}
}

message AccountRequest {
	string AccountName = 1;
	string FirstName =2;
	string pwd = 3;
}

message AccountResponse {
	int64 AccountId =1;
	string AccountName=2;
	string FirstName=3;
	string Message = 4;
	bool IsOk = 5;
}
