syntax = "proto3";

package user;

option go_package = "proto;user";

service User {
	rpc Register(UserRequest) returns (UserResponse){}
	rpc Login(UserRequest) returns (UserResponse){}
	rpc GetUserInfo(UserRequest) returns (UserResponse){}
}

message UserRequest{
	string UserName = 1;
	string FirstName =2;
	string pwd = 3;
}

message UserResponse{
	int64 UserId =1;
	string UserName=2;
	string FirstName=3;
	string Message = 4;
	bool IsOk = 5;
}
